# cargo-bake

./: Cargo.toml  README.md
src/: main.rs
