[package]
name = "cargo-bake"
version = "0.2.1"
authors = ["Brian Anderson <banderson@mozilla.com>"]
description = "Smarter default optimization settings for Rust + Cargo"
license = "MIT/Apache-2.0"
repository = "https://github.com/brson/cargo-bake"

[dependencies]
log = "0.3"
env_logger = "0.3"
num_cpus = "0.2"
stopwatch = "0.0.6"